Mirrored reads "sent" metric is incremented even if read was never sent

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Service Arch
    • Fully Compatible
    • ALL
    • Programmability 2024-08-05, Programmability 2024-08-19, Programmability 2024-09-02, Programmability 2024-09-16
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The counter for the "sent" metric is incremented after scheduling the remote command request for the mirrored read, rather than after the command is actually sent. In the event of a timeout getting a connection or a network error sending the command, this metric would have been incremented incorrectly. We should instead only increment this metric after the request has successfully been sent to the secondaries.

      https://github.com/10gen/mongo/blob/e1cc00b1d81b4367f2b888556b4bad00ddedee70/src/mongo/db/mirror_maestro.cpp#L516

            Assignee:
            Alex Li
            Reporter:
            Patrick Freed
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: