SERVER-91458 Update mirrored reads metrics to consider "erroredOnRead" case (#26671)

GitOrigin-RevId: 911be7e1a7908dabffceeeed3f0512f93c78215b